# pyDOOM

./: .gitignore  CMakeLists.txt  _pyDOOM.pyx  setup.py
linuxdoom-1.10/: Makefile  am_map.c  d_main.c  d_main.h  d_net.c  doomstat.h  g_game.c  hu_stuff.c  i_net.c  i_net.h  i_sound.c  i_system.c  i_system.h  i_video.c  i_video.h  info.c  m_menu.c  m_menu.h  m_misc.c  p_setup.c  p_spec.c  r_data.c  r_draw.c  r_main.c  s_sound.c  v_video.c  w_wad.c  wi_stuff.c  z_zone.c
pyDOOM/: __init__.py
test/: test.py
